// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bottom half plane 1`] = `
"████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    "
`;

exports[`box 1`] = `
"                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
        █████████████████████████████████████████████████████████████████████████████████████       
        █████████████████████████████████████████████████████████████████████████████████████       
        █████████████████████████████████████████████████████████████████████████████████████       
        █████████████████████████████████████████████████████████████████████████████████████       
        █████████████████████████████████████████████████████████████████████████████████████       
        █████████████████████████████████████████████████████████████████████████████████████       
        █████████████████████████████████████████████████████████████████████████████████████       
        █████████████████████████████████████████████████████████████████████████████████████       
        █████████████████████████████████████████████████████████████████████████████████████       
        █████████████████████████████████████████████████████████████████████████████████████       
        █████████████████████████████████████████████████████████████████████████████████████       
        █████████████████████████████████████████████████████████████████████████████████████       
        █████████████████████████████████████████████████████████████████████████████████████       
        █████████████████████████████████████████████████████████████████████████████████████       
        █████████████████████████████████████████████████████████████████████████████████████       
        █████████████████████████████████████████████████████████████████████████████████████       
        █████████████████████████████████████████████████████████████████████████████████████       
        █████████████████████████████████████████████████████████████████████████████████████       
        █████████████████████████████████████████████████████████████████████████████████████       
        █████████████████████████████████████████████████████████████████████████████████████       
        █████████████████████████████████████████████████████████████████████████████████████       
        █████████████████████████████████████████████████████████████████████████████████████       
        █████████████████████████████████████████████████████████████████████████████████████       
        █████████████████████████████████████████████████████████████████████████████████████       
        █████████████████████████████████████████████████████████████████████████████████████       
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    "
`;

exports[`box 2`] = `
"                                                                                                    
                                                                                                    
                                                                                                    
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                             ███████████                                            
                                                                                                    
                                                                                                    "
`;

exports[`circle 1`] = `
"                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                      █████████████████████████                                     
                                 ███████████████████████████████████                                
                             ███████████████████████████████████████████                            
                           ███████████████████████████████████████████████                          
                        █████████████████████████████████████████████████████                       
                      █████████████████████████████████████████████████████████                     
                    █████████████████████████████████████████████████████████████                   
                   ███████████████████████████████████████████████████████████████                  
                 ███████████████████████████████████████████████████████████████████                
                █████████████████████████████████████████████████████████████████████               
               ███████████████████████████████████████████████████████████████████████              
              █████████████████████████████████████████████████████████████████████████             
             ███████████████████████████████████████████████████████████████████████████            
            █████████████████████████████████████████████████████████████████████████████           
            █████████████████████████████████████████████████████████████████████████████           
           ███████████████████████████████████████████████████████████████████████████████          
           ███████████████████████████████████████████████████████████████████████████████          
           ███████████████████████████████████████████████████████████████████████████████          
           ███████████████████████████████████████████████████████████████████████████████          
           ███████████████████████████████████████████████████████████████████████████████          
           ███████████████████████████████████████████████████████████████████████████████          
           ███████████████████████████████████████████████████████████████████████████████          
           ███████████████████████████████████████████████████████████████████████████████          
           ███████████████████████████████████████████████████████████████████████████████          
            █████████████████████████████████████████████████████████████████████████████           
            █████████████████████████████████████████████████████████████████████████████           
             ███████████████████████████████████████████████████████████████████████████            
              █████████████████████████████████████████████████████████████████████████             
               ███████████████████████████████████████████████████████████████████████              
                █████████████████████████████████████████████████████████████████████               
                 ███████████████████████████████████████████████████████████████████                
                   ███████████████████████████████████████████████████████████████                  
                    █████████████████████████████████████████████████████████████                   
                      █████████████████████████████████████████████████████████                     
                        █████████████████████████████████████████████████████                       
                           ███████████████████████████████████████████████                          
                             ███████████████████████████████████████████                            
                                 ███████████████████████████████████                                
                                      █████████████████████████                                     
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    "
`;

exports[`circle 2`] = `
"                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                █████                                               
                                              █████████                                             
                                              █████████                                             
                                              █████████                                             
                                                █████                                               
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    "
`;

exports[`circle 3`] = `
"█████████████████▓▓▓▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒░▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓▓▓▓████████████████
██████████████▓▓▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒▒▒▒▒░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▒▒▒▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓▓▓█████████████
████████████▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒▒▒▒░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▒▒▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓███████████
██████████▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒▒░░░░░░░░░░░░░░˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖░░░░░░░░░░░░░░▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓█████████
████████▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒░░░░░░░░░░░˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖░░░░░░░░░░░▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓███████
██████▓▓▓▓▓▓▓▒▒▒▒▒▒▒░░░░░░░░░░˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖-˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖░░░░░░░░░░▒▒▒▒▒▒▒▓▓▓▓▓▓▓█████
████▓▓▓▓▓▓▓▒▒▒▒▒▒▒░░░░░░░░˖˖˖˖˖˖˖˖˖˖˖˖-------------------------˖˖˖˖˖˖˖˖˖˖˖˖░░░░░░░░▒▒▒▒▒▒▒▓▓▓▓▓▓▓███
██▓▓▓▓▓▓▓▒▒▒▒▒▒▒░░░░░░░˖˖˖˖˖˖˖˖˖˖-----------------------------------˖˖˖˖˖˖˖˖˖˖░░░░░░░▒▒▒▒▒▒▒▓▓▓▓▓▓▓█
█▓▓▓▓▓▓▒▒▒▒▒▒▒░░░░░░░˖˖˖˖˖˖˖˖-------------○○○○○○○○○○○○○○○○○-------------˖˖˖˖˖˖˖˖░░░░░░░▒▒▒▒▒▒▒▓▓▓▓▓▓
▓▓▓▓▓▓▒▒▒▒▒▒░░░░░░░˖˖˖˖˖˖˖----------○○○○○○○○○○○○○○○○○○○○○○○○○○○○○----------˖˖˖˖˖˖˖░░░░░░░▒▒▒▒▒▒▓▓▓▓▓
▓▓▓▓▒▒▒▒▒▒░░░░░░░˖˖˖˖˖˖˖--------○○○○○○○○○○○○○○○○○○◎○○○○○○○○○○○○○○○○○○--------˖˖˖˖˖˖˖░░░░░░░▒▒▒▒▒▒▓▓▓
▓▓▓▒▒▒▒▒▒░░░░░░˖˖˖˖˖˖˖-------○○○○○○○○○○○◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎○○○○○○○○○○○-------˖˖˖˖˖˖˖░░░░░░▒▒▒▒▒▒▓▓
▓▓▒▒▒▒▒▒░░░░░░˖˖˖˖˖˖-------○○○○○○○○○◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎○○○○○○○○○-------˖˖˖˖˖˖░░░░░░▒▒▒▒▒▒▓
▓▒▒▒▒▒▒░░░░░˖˖˖˖˖˖-------○○○○○○○◎◎◎◎◎◎◎◎◎◎◎◉◉◉◉◉◉◉◉◉◉◉◉◉◉◉◎◎◎◎◎◎◎◎◎◎◎○○○○○○○-------˖˖˖˖˖˖░░░░░▒▒▒▒▒▒
▒▒▒▒▒▒░░░░░˖˖˖˖˖˖------○○○○○○○◎◎◎◎◎◎◎◎◎◉◉◉◉◉◉◉◉◉◉◉◉◉◉◉◉◉◉◉◉◉◉◉◎◎◎◎◎◎◎◎◎○○○○○○○------˖˖˖˖˖˖░░░░░▒▒▒▒▒
▒▒▒▒▒░░░░░˖˖˖˖˖˖------○○○○○○◎◎◎◎◎◎◎◉◉◉◉◉◉◉◉◉◉◉◉◉◉◉●◉◉◉◉◉◉◉◉◉◉◉◉◉◉◉◎◎◎◎◎◎◎○○○○○○------˖˖˖˖˖˖░░░░░▒▒▒▒
▒▒▒▒░░░░░˖˖˖˖˖˖-----○○○○○○◎◎◎◎◎◎◎◉◉◉◉◉◉◉◉◉●●●●●●●●●●●●●●●●●◉◉◉◉◉◉◉◉◉◎◎◎◎◎◎◎○○○○○○-----˖˖˖˖˖˖░░░░░▒▒▒
▒▒▒░░░░░˖˖˖˖˖˖-----○○○○○○◎◎◎◎◎◎◉◉◉◉◉◉◉●●●●●●●●●●●●●●●●●●●●●●●●●◉◉◉◉◉◉◉◎◎◎◎◎◎○○○○○○-----˖˖˖˖˖˖░░░░░▒▒
▒▒░░░░░░˖˖˖˖˖-----○○○○○○◎◎◎◎◎◎◉◉◉◉◉◉●●●●●●●●●●●●●●●●●●●●●●●●●●●●●◉◉◉◉◉◉◎◎◎◎◎◎○○○○○○-----˖˖˖˖˖░░░░░░▒
▒▒░░░░░˖˖˖˖˖------○○○○○◎◎◎◎◎◎◉◉◉◉◉●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●◉◉◉◉◉◎◎◎◎◎◎○○○○○------˖˖˖˖˖░░░░░▒
▒▒░░░░░˖˖˖˖˖-----○○○○○◎◎◎◎◎◎◉◉◉◉◉●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●◉◉◉◉◉◎◎◎◎◎◎○○○○○-----˖˖˖˖˖░░░░░▒
▒░░░░░˖˖˖˖˖-----○○○○○○◎◎◎◎◎◉◉◉◉◉●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●◉◉◉◉◉◎◎◎◎◎○○○○○○-----˖˖˖˖˖░░░░░
▒░░░░░˖˖˖˖˖-----○○○○○◎◎◎◎◎◉◉◉◉◉●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●◉◉◉◉◉◎◎◎◎◎○○○○○-----˖˖˖˖˖░░░░░
▒░░░░░˖˖˖˖˖-----○○○○○◎◎◎◎◎◉◉◉◉◉●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●◉◉◉◉◉◎◎◎◎◎○○○○○-----˖˖˖˖˖░░░░░
▒░░░░░˖˖˖˖˖-----○○○○○◎◎◎◎◎◉◉◉◉◉●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●◉◉◉◉◉◎◎◎◎◎○○○○○-----˖˖˖˖˖░░░░░
░░░░░˖˖˖˖˖-----○○○○○◎◎◎◎◎◉◉◉◉◉●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●◉◉◉◉◉◎◎◎◎◎○○○○○-----˖˖˖˖˖░░░░
▒░░░░░˖˖˖˖˖-----○○○○○◎◎◎◎◎◉◉◉◉◉●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●◉◉◉◉◉◎◎◎◎◎○○○○○-----˖˖˖˖˖░░░░░
▒░░░░░˖˖˖˖˖-----○○○○○◎◎◎◎◎◉◉◉◉◉●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●◉◉◉◉◉◎◎◎◎◎○○○○○-----˖˖˖˖˖░░░░░
▒░░░░░˖˖˖˖˖-----○○○○○◎◎◎◎◎◉◉◉◉◉●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●◉◉◉◉◉◎◎◎◎◎○○○○○-----˖˖˖˖˖░░░░░
▒░░░░░˖˖˖˖˖-----○○○○○○◎◎◎◎◎◉◉◉◉◉●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●◉◉◉◉◉◎◎◎◎◎○○○○○○-----˖˖˖˖˖░░░░░
▒▒░░░░░˖˖˖˖˖-----○○○○○◎◎◎◎◎◎◉◉◉◉◉●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●◉◉◉◉◉◎◎◎◎◎◎○○○○○-----˖˖˖˖˖░░░░░▒
▒▒░░░░░˖˖˖˖˖------○○○○○◎◎◎◎◎◎◉◉◉◉◉●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●◉◉◉◉◉◎◎◎◎◎◎○○○○○------˖˖˖˖˖░░░░░▒
▒▒░░░░░░˖˖˖˖˖-----○○○○○○◎◎◎◎◎◎◉◉◉◉◉◉●●●●●●●●●●●●●●●●●●●●●●●●●●●●●◉◉◉◉◉◉◎◎◎◎◎◎○○○○○○-----˖˖˖˖˖░░░░░░▒
▒▒▒░░░░░˖˖˖˖˖˖-----○○○○○○◎◎◎◎◎◎◉◉◉◉◉◉◉●●●●●●●●●●●●●●●●●●●●●●●●●◉◉◉◉◉◉◉◎◎◎◎◎◎○○○○○○-----˖˖˖˖˖˖░░░░░▒▒
▒▒▒▒░░░░░˖˖˖˖˖˖-----○○○○○○◎◎◎◎◎◎◎◉◉◉◉◉◉◉◉◉●●●●●●●●●●●●●●●●●◉◉◉◉◉◉◉◉◉◎◎◎◎◎◎◎○○○○○○-----˖˖˖˖˖˖░░░░░▒▒▒
▒▒▒▒▒░░░░░˖˖˖˖˖˖------○○○○○○◎◎◎◎◎◎◎◉◉◉◉◉◉◉◉◉◉◉◉◉◉◉●◉◉◉◉◉◉◉◉◉◉◉◉◉◉◉◎◎◎◎◎◎◎○○○○○○------˖˖˖˖˖˖░░░░░▒▒▒▒
▒▒▒▒▒▒░░░░░˖˖˖˖˖˖------○○○○○○○◎◎◎◎◎◎◎◎◎◉◉◉◉◉◉◉◉◉◉◉◉◉◉◉◉◉◉◉◉◉◉◉◎◎◎◎◎◎◎◎◎○○○○○○○------˖˖˖˖˖˖░░░░░▒▒▒▒▒
▓▒▒▒▒▒▒░░░░░˖˖˖˖˖˖-------○○○○○○○◎◎◎◎◎◎◎◎◎◎◎◉◉◉◉◉◉◉◉◉◉◉◉◉◉◉◎◎◎◎◎◎◎◎◎◎◎○○○○○○○-------˖˖˖˖˖˖░░░░░▒▒▒▒▒▒
▓▓▒▒▒▒▒▒░░░░░░˖˖˖˖˖˖-------○○○○○○○○○◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎○○○○○○○○○-------˖˖˖˖˖˖░░░░░░▒▒▒▒▒▒▓
▓▓▓▒▒▒▒▒▒░░░░░░˖˖˖˖˖˖˖-------○○○○○○○○○○○◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎○○○○○○○○○○○-------˖˖˖˖˖˖˖░░░░░░▒▒▒▒▒▒▓▓
▓▓▓▓▒▒▒▒▒▒░░░░░░░˖˖˖˖˖˖˖--------○○○○○○○○○○○○○○○○○○◎○○○○○○○○○○○○○○○○○○--------˖˖˖˖˖˖˖░░░░░░░▒▒▒▒▒▒▓▓▓
▓▓▓▓▓▓▒▒▒▒▒▒░░░░░░░˖˖˖˖˖˖˖----------○○○○○○○○○○○○○○○○○○○○○○○○○○○○○----------˖˖˖˖˖˖˖░░░░░░░▒▒▒▒▒▒▓▓▓▓▓
█▓▓▓▓▓▓▒▒▒▒▒▒▒░░░░░░░˖˖˖˖˖˖˖˖-------------○○○○○○○○○○○○○○○○○-------------˖˖˖˖˖˖˖˖░░░░░░░▒▒▒▒▒▒▒▓▓▓▓▓▓
██▓▓▓▓▓▓▓▒▒▒▒▒▒▒░░░░░░░˖˖˖˖˖˖˖˖˖˖-----------------------------------˖˖˖˖˖˖˖˖˖˖░░░░░░░▒▒▒▒▒▒▒▓▓▓▓▓▓▓█
████▓▓▓▓▓▓▓▒▒▒▒▒▒▒░░░░░░░░˖˖˖˖˖˖˖˖˖˖˖˖-------------------------˖˖˖˖˖˖˖˖˖˖˖˖░░░░░░░░▒▒▒▒▒▒▒▓▓▓▓▓▓▓███
██████▓▓▓▓▓▓▓▒▒▒▒▒▒▒░░░░░░░░░░˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖-˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖░░░░░░░░░░▒▒▒▒▒▒▒▓▓▓▓▓▓▓█████
████████▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒░░░░░░░░░░░˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖░░░░░░░░░░░▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓███████
██████████▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒▒░░░░░░░░░░░░░░˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖░░░░░░░░░░░░░░▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓█████████
████████████▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒▒▒▒░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▒▒▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓███████████
██████████████▓▓▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒▒▒▒▒░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▒▒▒▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓▓▓█████████████"
`;

exports[`closed path 1`] = `
"█████████████████████████████████▓▓▓▓▓▓▒▒▒▒▒▒▒▒▒▒▒░▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓▓▓▓▓█
████████████████████████████████▓▓▓▓▓▓▒▒▒▒▒▒░░░░░░░░░░░░░░░░░░░░░▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓
███████████████████████████████▓▓▓▓▓▓▒▒▒▒▒░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▓▓▓▓
███████████████████████████████▓▓▓▓▓▒▒▒▒▒░░░░░░˖˖˖˖˖˖˖˖˖˖˖░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▒▒▒▒▒▒▒▒▓▓
██████████████████████████████▓▓▓▓▓▒▒▒▒▒▒░░░░░˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖░░░░░░░░░░░░░░░░░░░░░▒▒▒▒▒▒▓
█████████████████████████████▓▓▓▓▓▒▒▒▒▒▒░░░░░˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖░░░░░░░░▒▒▒▒▒▒
████████████████████████████▓▓▓▓▓▓▒▒▒▒▒░░░░░˖˖˖˖˖˖--------------˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖˖░░░░░░▒▒▒▒
████████████████████████████▓▓▓▓▓▒▒▒▒▒░░░░░░˖˖˖˖˖------------------------------˖˖˖˖˖˖˖˖˖˖˖˖░░░░░░▒▒▒
███████████████████████████▓▓▓▓▓▒▒▒▒▒░░░░░░˖˖˖˖˖------○○○-----------------------------˖˖˖˖˖˖░░░░░░▒▒
██████████████████████████▓▓▓▓▓▒▒▒▒▒▒░░░░░˖˖˖˖˖------○○○○○○○○○○○○○○○○○○----------------˖˖˖˖˖˖░░░░░▒▒
█████████████████████████▓▓▓▓▓▓▒▒▒▒▒░░░░░˖˖˖˖˖˖-----○○○○○○○○○○○○○○○○○○○○○○○○○○○○○○○-----˖˖˖˖˖˖░░░░░▒
████████████████████████▓▓▓▓▓▓▒▒▒▒▒░░░░░░˖˖˖˖˖-----○○○○○○◎◎◎◎◎◎◎○○○○○○○○○○○○○○○○○○○○-----˖˖˖˖˖░░░░░▒
████████████████████████▓▓▓▓▓▒▒▒▒▒░░░░░░˖˖˖˖˖-----○○○○○○◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎○○○○○○------˖˖˖˖˖░░░░░
███████████████████████▓▓▓▓▓▒▒▒▒▒▒░░░░░˖˖˖˖˖------○○○○○◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎◎○○○○○-----˖˖˖˖˖░░░░░
██████████████████████▓▓▓▓▓▓▒▒▒▒▒░░░░░˖˖˖˖˖˖-----○○○○○◎◎◎◎◎◎◉◉◉◉◉◉◉◉◉◉◎◎◎◎◎◎◎◎◎◎○○○○○-----˖˖˖˖˖░░░░░
█████████████████████▓▓▓▓▓▓▒▒▒▒▒░░░░░˖˖˖˖˖˖-----○○○○○○◎◎◎◎◎◉◉◉◉◉◉◉◉◉◉◉◉◉◉◉◉◎◎◎◎◎○○○○○-----˖˖˖˖˖░░░░░
█████████████████████▓▓▓▓▓▒▒▒▒▒░░░░░░˖˖˖˖˖-----○○○○○○◎◎◎◎◎◉◉◉◉◉◉◉◉◉◉◉◉◉◉◉◉◎◎◎◎◎◎○○○○○-----˖˖˖˖˖░░░░░
████████████████████▓▓▓▓▓▒▒▒▒▒▒░░░░░˖˖˖˖˖------○○○○○◎◎◎◎◎◉◉◉◉◉◉◉◉◉◉◉◉◉◉◉◉◎◎◎◎◎◎○○○○○------˖˖˖˖˖░░░░░
███████████████████▓▓▓▓▓▒▒▒▒▒▒░░░░░˖˖˖˖˖------○○○○○◎◎◎◎◎◎◉◉◉◉◉◉◉◉◉◉◉◉◉◎◎◎◎◎◎◎◎○○○○○○-----˖˖˖˖˖░░░░░▒
██████████████████▓▓▓▓▓▓▒▒▒▒▒░░░░░˖˖˖˖˖˖-----○○○○○◎◎◎◎◎◎◉◉◉◉◉◉◉◉◉◉◎◎◎◎◎◎◎◎◎◎○○○○○○○-----˖˖˖˖˖˖░░░░░▒
██████████████████▓▓▓▓▓▒▒▒▒▒░░░░░░˖˖˖˖˖-----○○○○○○◎◎◎◎◎◉◉◉◉◉◉◉◎◎◎◎◎◎◎◎◎◎◎○○○○○○○○------˖˖˖˖˖˖░░░░░▒▒
█████████████████▓▓▓▓▓▒▒▒▒▒░░░░░░˖˖˖˖˖------○○○○○◎◎◎◎◎◉◉◉◉◎◎◎◎◎◎◎◎◎◎◎○○○○○○○○○○-------˖˖˖˖˖˖░░░░░▒▒▒
████████████████▓▓▓▓▓▒▒▒▒▒▒░░░░░˖˖˖˖˖------○○○○○◎◎◎◎◎◉◎◎◎◎◎◎◎◎◎◎◎○○○○○○○○○○○--------˖˖˖˖˖˖˖░░░░░▒▒▒▒
███████████████▓▓▓▓▓▓▒▒▒▒▒░░░░░˖˖˖˖˖˖-----○○○○○◎◎◎◎◎◎◎◎◎◎◎◎◎◎○○○○○○○○○○○----------˖˖˖˖˖˖˖░░░░░░▒▒▒▒▒
██████████████▓▓▓▓▓▓▒▒▒▒▒░░░░░░˖˖˖˖˖-----○○○○○○◎◎◎◎◎◎◎◎◎◎○○○○○○○○○○○------------˖˖˖˖˖˖˖░░░░░░░▒▒▒▒▒▒
██████████████▓▓▓▓▓▒▒▒▒▒░░░░░░˖˖˖˖˖-----○○○○○○◎◎◎◎◎◎◎○○○○○○○○○○○-----------˖˖˖˖˖˖˖˖˖░░░░░░░▒▒▒▒▒▒▒▓
█████████████▓▓▓▓▓▒▒▒▒▒▒░░░░░˖˖˖˖˖------○○○○○◎◎◎◎○○○○○○○○○○○------------˖˖˖˖˖˖˖˖˖˖˖░░░░░░░▒▒▒▒▒▒▒▓▓▓
████████████▓▓▓▓▓▓▒▒▒▒▒░░░░░˖˖˖˖˖˖-----○○○○○◎○○○○○○○○○○○-----------˖˖˖˖˖˖˖˖˖˖˖˖░░░░░░░░░▒▒▒▒▒▒▒▓▓▓▓▓
███████████▓▓▓▓▓▓▒▒▒▒▒░░░░░˖˖˖˖˖˖-----○○○○○○○○○○○○○○------------˖˖˖˖˖˖˖˖˖˖˖░░░░░░░░░░░▒▒▒▒▒▒▒▒▓▓▓▓▓▓
███████████▓▓▓▓▓▒▒▒▒▒░░░░░░˖˖˖˖˖-----○○○○○○○○○○○------------˖˖˖˖˖˖˖˖˖˖˖░░░░░░░░░░░▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓█
██████████▓▓▓▓▓▒▒▒▒▒▒░░░░░˖˖˖˖˖------○○○○○○○------------˖˖˖˖˖˖˖˖˖˖˖░░░░░░░░░░░▒▒▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓███
█████████▓▓▓▓▓▒▒▒▒▒▒░░░░░˖˖˖˖˖˖-----○○○○------------˖˖˖˖˖˖˖˖˖˖˖░░░░░░░░░░░▒▒▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓▓██████
████████▓▓▓▓▓▓▒▒▒▒▒░░░░░˖˖˖˖˖˖-----○-----------˖˖˖˖˖˖˖˖˖˖˖˖░░░░░░░░░░░▒▒▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓▓▓▓████████
████████▓▓▓▓▓▒▒▒▒▒░░░░░░˖˖˖˖˖---------------˖˖˖˖˖˖˖˖˖˖˖░░░░░░░░░░░▒▒▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓▓▓▓████████████
███████▓▓▓▓▓▒▒▒▒▒░░░░░░˖˖˖˖˖------------˖˖˖˖˖˖˖˖˖˖˖░░░░░░░░░░░▒▒▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓▓▓▓████████████████
██████▓▓▓▓▓▒▒▒▒▒▒░░░░░˖˖˖˖˖---------˖˖˖˖˖˖˖˖˖˖˖░░░░░░░░░░░▒▒▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓▓▓▓████████████████████
██████▓▓▓▓▓▒▒▒▒▒░░░░░˖˖˖˖˖˖-----˖˖˖˖˖˖˖˖˖˖˖░░░░░░░░░░░▒▒▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓▓▓▓████████████████████████
██████▓▓▓▓▓▒▒▒▒▒░░░░░˖˖˖˖˖--˖˖˖˖˖˖˖˖˖˖˖░░░░░░░░░░░▒▒▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓▓▓▓████████████████████████████
██████▓▓▓▓▓▒▒▒▒▒░░░░░˖˖˖˖˖˖˖˖˖˖˖˖˖˖░░░░░░░░░░░▒▒▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓▓▓▓████████████████████████████████
██████▓▓▓▓▓▒▒▒▒▒░░░░░˖˖˖˖˖˖˖˖˖˖░░░░░░░░░░░▒▒▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓▓▓▓████████████████████████████████████
██████▓▓▓▓▓▒▒▒▒▒▒░░░░░░░░˖░░░░░░░░░░░░▒▒▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓▓▓▓████████████████████████████████████████
███████▓▓▓▓▓▒▒▒▒▒▒░░░░░░░░░░░░░░░░▒▒▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓▓▓▓████████████████████████████████████████████
████████▓▓▓▓▓▒▒▒▒▒▒▒▒░░░░░░░░░▒▒▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓▓▓▓████████████████████████████████████████████████
█████████▓▓▓▓▓▓▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓▓▓▓████████████████████████████████████████████████████
██████████▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓▓▓▓████████████████████████████████████████████████████████
████████████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓████████████████████████████████████████████████████████████
███████████████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓████████████████████████████████████████████████████████████████
███████████████████▓▓▓▓▓▓▓▓▓▓▓▓▓████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████"
`;

exports[`left half plane 1`] = `
"██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  
██████████████████████████████████████████████████                                                  "
`;

exports[`right half plane 1`] = `
"                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████
                                                   █████████████████████████████████████████████████"
`;

exports[`top half plane 1`] = `
"                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████
████████████████████████████████████████████████████████████████████████████████████████████████████"
`;
